fix: fixed dropdown on mobile and reorganized assets

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/filter-section/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/filter-section/styles.scss
@@ -1,10 +1,10 @@
 /*!
  * Copyright 2014-2024 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license.
  */
-@import '../tokens/index';
+@import '../_tokens/index';
 
 .filter-section {
-  z-index: 0;
+  z-index: 1;
 
   display: flex;
   align-items: center;
@@ -14,7 +14,21 @@
   gap: 2px;
 
   @media (width < $breakpoint-desktop-min) {
-    display: none;
+    margin-right: 0;
+
+    & > :not(.dropdown) {
+      display: none;
+    }
+
+    &--dropdown-toggle {
+      background-image: url('../_assets/filter.svg');
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+
+      &::after {
+        display: none;
+      }
+    }
   }
 
   &--header {
